--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@remix-run/react": "^2.9.1",
     "@remix-run/serve": "^2.9.1",
     "isbot": "^4.1.0",
+    "lodash": "^4.17.21",
+    "pocketbase": "^0.21.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remix-auth": "^3.6.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.1",
